# DOCO

./: .gitignore  README.md  README.relative_position_fusion.architecture.md  README.relative_position_fusion.codex.md  README.relative_position_fusion.implementation.md  README.relative_position_fusion.interfaces.md  README.relative_position_fusion.verification.md  README.repo_split.md  REPORT.relative_position_fusion.md  colcon.sh  dependencies.repos
build_rework/px4_msgs/: Makefile  ament_cmake_symlink_install_targets_0_.cmake  ament_cmake_symlink_install_targets_1_.cmake  ament_cmake_symlink_install_targets_2_.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__px4_msgs.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json  symlink_install_manifest.txt
build_rework/quadrotor_msgs/: Makefile  ament_cmake_symlink_install_targets_0_.cmake  ament_cmake_symlink_install_targets_1_.cmake  ament_cmake_symlink_install_targets_2_.cmake  ament_cmake_symlink_install_targets_3_.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  rosidl_adapter__arguments__quadrotor_msgs.json  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json  symlink_install_manifest.txt
build_rework/relative_position_fusion/: Makefile  ament_cmake_symlink_install_targets_0_.cmake  colcon_command_prefix_build.sh.env  colcon_command_prefix_test.sh  colcon_command_prefix_test.sh.env  symlink_install_manifest.txt  test_relative_position_filter  test_relocalization_monitor  (+2 more)
install_rework/: local_setup.sh  setup.sh
log_rework/: latest_build  latest_test
manifests/: README.md  dev_full.repos  uav_hw.repos  ugv_hw.repos
scripts/: cleanup_daemons.sh  phase2_split_repos.sh  uav_hover.sh  uav_land.sh  uav_relative_go_above_ugv.sh  uav_relative_position_mode.sh  uav_relative_start.sh  uav_relative_stop.sh  uav_relative_tracking.sh  uav_takeoff.sh  uav_visual_landing.sh
src/duojin01_bringup/: package.xml  setup.cfg  setup.py
src/duojin01_bringup/config/: relative_position_fusion.sim_navigation.yaml
src/duojin01_bringup/config/rviz/: sim.rviz  sim_navigation.rviz
src/duojin01_bringup/docs/: sim_navigation_relative_position_fusion.md
src/duojin01_bringup/launch/: sim.launch.py  sim_navigation.launch.py
src/relative_position_fusion/: CMakeLists.txt  package.xml
src/relative_position_fusion/config/: relative_position_fusion.common.yaml  relative_position_fusion.duojin_sim.yaml  relative_position_fusion.hw.yaml  relative_position_fusion.sim_navigation.yaml  relative_tracking.common.yaml
src/relative_position_fusion/include/relative_position_fusion/: agent_planar_state.hpp  covariance_utils.hpp  diagnostics_publisher.hpp  relative_position_filter.hpp  relative_tracking_controller.hpp  relocalization_monitor.hpp  time_alignment_buffer.hpp  uav_state_adapter.hpp  ugv_state_adapter.hpp
src/relative_position_fusion/launch/: relative_position_fusion.launch.py
src/relative_position_fusion/src/: diagnostics_publisher.cpp  relative_position_filter.cpp  relative_position_fusion_node.cpp  relative_tracking_controller.cpp  relative_tracking_node.cpp  relocalization_monitor.cpp  time_alignment_buffer.cpp  uav_state_adapter.cpp  ugv_state_adapter.cpp
src/relative_position_fusion/srv/: StartRelativeTracking.srv
src/relative_position_fusion/test/: test_relative_position_filter.cpp  test_relative_tracking_controller.cpp  test_relocalization_monitor.cpp  test_time_alignment_buffer.cpp  test_uav_state_adapter.cpp  test_ugv_state_adapter.cpp
src/sim_worlds/: CMakeLists.txt  package.xml
src/sim_worlds/config/: ros_gz_bridge_clock.yaml
src/sim_worlds/launch/: gz_sim.launch.py  runtime.launch.py  sim_clock.launch.py  world_registry.py
src/sim_worlds/models/apriltag/: model.config
src/sim_worlds/models/apriltag/media/: README.md  generate_tags.py
src/sim_worlds/models/baylands/: model.sdf
src/sim_worlds/models/coast_water/: model.sdf
src/sim_worlds/models/ground_texture/: model.config  model.sdf
src/sim_worlds/sim_worlds/: __init__.py  launch_common.py
src/sim_worlds/worlds/: baylands.sdf  empty.sdf  test.sdf
src/uav_gz_bridge/: CMakeLists.txt  package.xml
src/ugv_controller_emulator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ugv_controller_emulator/include/ugv_controller_emulator/: controller_emulator_core.hpp
src/ugv_controller_emulator/src/: controller_emulator_core.cpp  controller_emulator_node.cpp
src/ugv_controller_emulator/ugv_controller_emulator/: controller_emulator_node.py
src/ugv_sim_bringup/: CMakeLists.txt  package.xml
src/ugv_sim_bringup/launch/: sim.launch.py  sim_mapping.launch.py  sim_navigation.launch.py
src/ugv_sim_tools/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ugv_sim_tools/include/ugv_sim_tools/: clock_guard_logic.hpp  initial_pose_logic.hpp  odom_to_tf_logic.hpp  point_cloud_utils.hpp
src/ugv_sim_tools/src/: clock_guard_logic.cpp  clock_guard_node.cpp  initial_pose_logic.cpp  initial_pose_publisher_node.cpp  joint_state_stamp_fix_node.cpp  odom_to_tf_logic.cpp  odom_to_tf_node.cpp  orbbec_topic_compat_node.cpp  point_cloud_utils.cpp  scan_frame_rewriter_node.cpp
src/ugv_sim_tools/test/: test_initial_pose_logic.cpp  test_odom_to_tf_logic.cpp
src/ugv_sim_tools/ugv_sim_tools/: clock_guard_node.py  initial_pose_publisher.py  joint_state_stamp_fix_node.py  odom_to_tf_node.py  orbbec_topic_compat_node.py  scan_frame_rewriter.py
(+4596 files in other folders)
