<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duojin01_bringup</name>
  <version>0.0.0</version>
  <description>Collaborative bringup for UGV and UAV simulation orchestration.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sim_worlds</exec_depend>
  <exec_depend>ugv_sim_bringup</exec_depend>
  <exec_depend>uav_sim_bringup</exec_depend>
  <exec_depend>relative_position_fusion</exec_depend>
  <exec_depend>uav_mode_supervisor</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
