<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_gz_bridge</name>
  <version>0.0.0</version>
  <description>Gazebo bridge nodes for UAV simulation sensors and ground-truth topics.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>px4_msgs</depend>
  <depend>uav_bridge</depend>

  <build_depend>gz-transport13</build_depend>
  <build_depend>gz-msgs10</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>gz-transport13</exec_depend>
  <exec_depend>gz-msgs10</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
