<?xml version="1.0"?>
<package format="3">
  <name>ugv_controller_emulator</name>
  <version>0.0.0</version>
  <description>通过PTY模拟 duojin01 底盘控制逻辑，实现与硬件驱动等效的仿真。</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
