<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_sim_bringup</name>
  <version>0.0.0</version>
  <description>Simulation-only UGV bringup entrypoints and Gazebo-facing config.</description>
  <maintainer email="litianshun.cn@gmail.com">litianshun</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>sim_worlds</exec_depend>
  <exec_depend>ugv_bringup</exec_depend>
  <exec_depend>ugv_controller_emulator</exec_depend>
  <exec_depend>ugv_sim_tools</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ugv_description</exec_depend>
  <exec_depend>ugv_safety_watchdog</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
